# rezalnyash-backend

./: .gitignore  Cargo.toml  README.md
config/: dev.toml  local.toml
migrations/: 001_cutting_system.sql.sql  002_fix_numeric_types.sql  003_fix_types.sql  004_add_table.sql  005_update_table.sql  006_rename_table.sql  007_insert_test_data.sql
src/: app_state.rs  handlers.rs  json_generator.rs  main.rs  models.rs  server.rs  svg_generator.rs
src/api/: mod.rs
src/api/v1/: health_api.rs  materials_api.rs  mod.rs
src/database/: connection.rs  migrations.rs  mod.rs  repositories.rs  service.rs
src/database/repositories/: materials.rs  mod.rs
src/error/: handlers.rs  mod.rs
src/features/: mod.rs
src/features/health/: mod.rs
src/features/health/domain/: mod.rs
src/features/health/domain/entities/: health_status.rs  mod.rs
src/features/health/domain/errors/: handlers.rs  types.rs
src/features/health/domain/traits/: health_behavior.rs  mod.rs
src/features/health/handlers/traits/: health_handler.rs  mod.rs
src/features/health/handlers/v1/: health_handler_v1.rs  mod.rs
src/features/health/repositories/implementations/: mod.rs  postgres_health_repository.rs
src/features/health/repositories/traits/: health_repository.rs  mod.rs
src/features/health/routes/: builder.rs  v1.rs
src/features/health/services/: mod.rs
src/features/health/services/dto/: health_status_dto.rs  mod.rs
src/features/health/services/implementations/: health_service_impl.rs  mod.rs
src/features/health/services/traits/: health_service.rs  mod.rs
src/features/materials/: mod.rs
src/features/materials/domain/: mod.rs
src/features/materials/domain/entities/: height.rs  material_name.rs  material_type.rs  mod.rs  thickness.rs  width.rs
src/features/materials/domain/errors/: conversions.rs  handlers.rs  material_errors.rs  mod.rs  types.rs
src/features/materials/domain/traits/: height_behavior.rs  material_name_behavior.rs  material_type_behavior.rs  mod.rs  thickness_behavior.rs  width_behavior.rs
src/features/materials/domain/value_objects/: height_uid.rs  material_name_id.rs  material_type_id.rs  material_type_uid.rs  mod.rs  thickness_uid.rs  width_uid.rs
src/features/materials/features/: mod.rs
src/features/materials/features/heights/: entity.rs  handler.rs  repository.rs  service.rs
src/features/materials/features/material_names/: entity.rs  handler.rs  repository.rs  service.rs
src/features/materials/features/material_types/: entity.rs  handler.rs  repository.rs  service.rs
src/features/materials/features/materials/: entity.rs  handler.rs  repository.rs  service.rs
src/features/materials/features/names/: entity.rs  handler.rs  mod.rs  repository.rs  service.rs
src/features/materials/features/thicknesses/: entity.rs  handler.rs  mod.rs  repository.rs  service.rs
src/features/materials/features/types/: entity.rs  handler.rs  service.rs  (+1 more)
src/features/materials/handlers/: mod.rs
src/features/materials/models/: mod.rs
src/features/materials/repositories/: mod.rs
src/features/materials/routes/: builder.rs  mod.rs  v1.rs
src/features/materials/services/: mod.rs
src/features/materials/shared/: database.rs  errors.rs  mod.rs  routes.rs
src/logger/: config.rs
src/models/: margins.rs  materials.rs  mod.rs  other.rs
src/services/: materials.rs
src/setting/: build_env.rs  settings.rs
src/setting/models/: app_config.rs  app_env.rs  app_state.rs
src/shared/: mod.rs
src/shared/database/: connection.rs  service.rs
src/shared/error/: conversions.rs  types.rs
src/shared/setting/models/: app_state.rs
src/shared/utils/: language.rs  mod.rs
src/svg_generator/: layout_horizontal.rs  layout_optimal.rs  layout_vertical.rs  mod.rs  svg_builder.rs  svg_generator.rs
src/utils/: mod.rs
(+76 files in other folders)
