[package]
name = "rezalnyash"
version = "0.2.0"
edition = "2021"
description = "Optimizer cutting sheet materials"
authors = ["Rezalnyash Team"]

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["cors"] }

log = "0.4.27"
env_logger = "0.11.8"